--- a/index.html
+++ b/index.html
@@ -5,11 +5,45 @@
     <title>Estação Gourmet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/images/logo1.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="/css/swiper.css">
+    <link rel="stylesheet" href="/css/responsive.css">
 </head>
 
 <body>
     <main>
-        
+        <script type="module" src="/js/swiper.js"></script>
+
+    <nav class="main-menu">
+        <img src="assets/images/logo1.png" alt="">
+        <div class="mobile-menu">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+            <li class="nav-links"><a href="">Início</a></li>
+            <li class="nav-links"><a href="">Cardápio</a></li>
+            <li class="nav-links"><a href="">Contato</a></li>
+        </ul>
+    </nav>
+
+    <div class="swiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img class="swiper-img" src="/assets/images/swiper-home/slide1.jpg" alt="Slide 1">
+                <span class="swiper-text">Uma estação de sabores doces que encanta</span>
+                <div class="swiper-button">
+                    <span class="swiper-button-text">Conheça nosso cardápio</span>
+                </div>
+            </div>
+            <div class="swiper-slide"><img class="swiper-img" src="/assets/images/swiper-home/slide2.jpg" alt="Slide 2"></div>
+            <div class="swiper-slide"><img class="swiper-img" src="/assets/images/swiper-home/slide3.jpg" alt="Slide 3"></div>
+        </div>
+    </div>
+
+    <script type="module" src="/js/mobile-navbar.js"></script>
     </main>
     <footer class="footer">
         <div id="footer-content">
