--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estação Gourmet</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="/assets/images/logo1.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/css/swiper.css">
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/responsive.css">
 </head>
 
 <body>
-    <script type="module" src="/js/swiper.js"></script>
+    <main>
+        <script type="module" src="/js/swiper.js"></script>
 
     <nav class="main-menu">
         <img src="assets/images/logo1.png" alt="">
@@ -43,8 +43,31 @@
         </div>
     </div>
 
-
     <script type="module" src="/js/mobile-navbar.js"></script>
+    </main>
+    <footer class="footer">
+        <div id="footer-content">
+            <ul class="footer-list">
+                <li><h2>Cardápio</h2></li>
+                <li><a href="#" class="footer-link">- Entradas</a></li>
+                <li><a href="#" class="footer-link">- Pratos Principais</a></li>
+                <li><a href="#" class="footer-link">- Bebidas</a></li>
+            </ul>
+
+            <ul class="footer-list">
+                <li><h2>Atendimento</h2></li>
+                <li><a href="#" class="footer-link">- Fale conosco</a></li>
+                <li><a href="#" class="footer-link">- FAQ</a></li>
+                <li><a href="#" class="footer-link">- Reservas</a></li>
+            </ul>
+
+            <div id="footer-contatos">
+                <h2>Telefone: (14) 99999-9999</h2>
+                <h2>E-mail: blablabla@gmail.com</h2>
+                <h2>Endereço: R. Irmã Arminda,<br> 10-50 - Jardim Brasil, Bauru -<br>SP, 17011-160</h2>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
