--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Estação Gourmet</title>
@@ -15,47 +16,54 @@
     <main>
         <script type="module" src="/js/swiper.js"></script>
 
-    <nav class="main-menu">
-        <img src="assets/images/logo1.png" alt="">
-        <div class="mobile-menu">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-        <ul class="nav-list">
-            <li class="nav-links"><a href="">Início</a></li>
-            <li class="nav-links"><a href="">Cardápio</a></li>
-            <li class="nav-links"><a href="">Contato</a></li>
-        </ul>
-    </nav>
-
-    <div class="swiper">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <img class="swiper-img" src="/assets/images/swiper-home/slide1.jpg" alt="Slide 1">
-                <span class="swiper-text">Uma estação de sabores doces que encanta</span>
-                <div class="swiper-button">
-                    <span class="swiper-button-text">Conheça nosso cardápio</span>
-                </div>
+        <nav class="main-menu">
+            <img src="assets/images/logo1.png" alt="">
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
             </div>
-            <div class="swiper-slide"><img class="swiper-img" src="/assets/images/swiper-home/slide2.jpg" alt="Slide 2"></div>
-            <div class="swiper-slide"><img class="swiper-img" src="/assets/images/swiper-home/slide3.jpg" alt="Slide 3"></div>
-        </div>
-    </div>
+            <ul class="nav-list">
+                <li class="nav-links"><a href="">Início</a></li>
+                <li class="nav-links"><a href="">Cardápio</a></li>
+                <li class="nav-links"><a href="">Contato</a></li>
+            </ul>
+        </nav>
 
-    <script type="module" src="/js/mobile-navbar.js"></script>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img class="swiper-img" src="/assets/images/swiper-home/slide1.jpg" alt="Slide 1">
+                    <span class="swiper-text">Uma estação de sabores doces que encanta</span>
+                    <div class="swiper-button">
+                        <span class="swiper-button-text">Conheça nosso cardápio</span>
+                    </div>
+                </div>
+                <div class="swiper-slide"><img class="swiper-img" src="/assets/images/swiper-home/slide2.jpg"
+                        alt="Slide 2"></div>
+                <div class="swiper-slide"><img class="swiper-img" src="/assets/images/swiper-home/slide3.jpg"
+                        alt="Slide 3"></div>
+            </div>
+        </div>
+
+        <script type="module" src="/js/mobile-navbar.js"></script>
     </main>
+    
     <footer class="footer">
         <div id="footer-content">
             <ul class="footer-list">
-                <li><h2>Cardápio</h2></li>
+                <li>
+                    <h2>Cardápio</h2>
+                </li>
                 <li><a href="#" class="footer-link">- Entradas</a></li>
                 <li><a href="#" class="footer-link">- Pratos Principais</a></li>
                 <li><a href="#" class="footer-link">- Bebidas</a></li>
             </ul>
 
             <ul class="footer-list">
-                <li><h2>Atendimento</h2></li>
+                <li>
+                    <h2>Atendimento</h2>
+                </li>
                 <li><a href="#" class="footer-link">- Fale conosco</a></li>
                 <li><a href="#" class="footer-link">- FAQ</a></li>
                 <li><a href="#" class="footer-link">- Reservas</a></li>
